Prevent event boxes from appearing clipped on the calendar's last column

--- a/client/scss/calendar.scss
+++ b/client/scss/calendar.scss
@@ -202,7 +202,10 @@ $eventBoxHeight: 20px;
 
 .calendar-wrapper {
   position: relative;
-  overflow: hidden;
+
+  &.sliding {
+    overflow: hidden;
+  }
 }
 
 .month-wrapper {
